<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>


    <!--    GreenWizard-->
    <string name="app_name">Green Wizard</string>

    <!--Selectionpage-->
    <string name="SelectionTitle">Select 1 of the available module</string>
    <string name="ReportButton">Illegal Dump</string>
    <string name="RecycleButton">Recycle Point</string>

    <!--Report Illegal Dump-->
    <string name="ReportTitle">Illegal Dump Report</string>
    <string name="Location">Location</string>
    <string name="DateTimeReported">DateTime Reported</string>
    <string name="TypeOfWaste">Choose the type of the waste</string>
    <string name="Submit">Submit</string>
    <string name="Clear">Clear</string>
    <string name="NewReportButton">Add Illegal Dump Report</string>
    <string name="Edit">Edit Report</string>
    <string name="Delete">Delete Report</string>
    <string name="Update">Updtae status</string>

    <!--    Recycle Point-->
    <string name="RecycleTitle">Recycle Point</string>
    <string name="Recyclable">Recycable or Non-Recycable</string>
    <string name="NewRecycleButton">Add Recycle Point</string>


    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
